# NULLXES-VERIDIAN

./: .gitignore  README.md  gr.json  gsl_starter_1_2.json  pyproject.toml
configs/data/: long_context_100b.yaml  pretrain_2t.yaml  sft_ru.yaml
configs/model/: veridian_60b.yaml  veridian_debug.yaml
configs/tokenizer/: bpe_128k.yaml  bpe_qwen_131k.yaml  unigram_64k.yaml
configs/train/: long_context_h200.yaml  pretrain_h200.yaml  sft_h200.yaml
exports/: README.md  config.json  generation_config.json  tokenizer_config.json
src/veridian/: __init__.py  config.py
src/veridian/data/: __init__.py  mixture.py
src/veridian/modeling/: __init__.py  attention.py  moe.py  rmsnorm.py  rope.py  transformer.py
src/veridian/tokenizer/: __init__.py  eval_bpe_qwen.py  eval_spm_unigram.py  spec.py  train.py  train_bpe_qwen.py  train_spm_unigram.py
src/veridian/train/: checkpointing.py  optim.py  pretrain.py  sft.py
